[package]
name = "egui-glyphon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.26.2", default-features = false }
egui-wgpu = "0.26.2"
glyphon = { git = "https://github.com/StratusFearMe21/glyphon" }

[dev-dependencies]
eframe = { git = "https://github.com/emilk/egui", features = ["wgpu"] }
env_logger = "0.11.1"
