[package]
name = "egui-glyphon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.30.0", default-features = false }
egui-wgpu = "0.30.0"
glyphon = "0.7.0"

[dev-dependencies]
eframe = { version = "0.30.0", features = ["wgpu"] }
env_logger = "0.11.3"
